Dummy Issue tiles
Dummy Issue tiles

--- a/css/sections.css
+++ b/css/sections.css
@@ -219,6 +219,10 @@ footer {
 	background-image:url(../images/preview-place.png);
 }
 
+.da-thumbs .blank{
+	background-image:url(../images/preview-dummy.png);
+}
+
 /*----------- END TILES ------------------------------------------*/
 
 /*----------- START DOTS ------------------------------------------*/
