--- a/hotsprings/bridgeport/css/pages.css
+++ b/hotsprings/bridgeport/css/pages.css
@@ -3,8 +3,8 @@ body{
 	font-size: 20px;
 	color: #000;
 	font-family: 'NewsGothicBT-RomanCondensed',sans-serif; 
-	min-height: 480px;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	min-height: 540px;
 }
 
 img {
@@ -18,15 +18,12 @@ h2 {
 	padding:0;
 	text-transform:uppercase;
 }
-
 /*----------- NAV --------------*/
 /*-----------SITE NAVIGATION ---------------*/
 #nav-holder {
-	position:absolute;
+	position:relative;
 	display:block;
 	width:100%;
-	/*top: 0;
-	left: 0;*/
 }
 
 #nav {
@@ -34,7 +31,6 @@ h2 {
 	width: 30%;
 	z-index:100;
 }
-
 
 /*-----------PAGE NAVIGATION ---------------*/
 .pg-nav {
@@ -44,15 +40,12 @@ h2 {
 	text-align: center;
 	left: 0px;
 	top: 0px;
-	/*height: 200px;*/
 	z-index: 2000;
-	/* background: rgba(75,75,75,0.2); */
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	-o-user-select: none;
 	user-select: none;
-	
 	pointer-events:none;
 }
 .pg-nav span {
@@ -70,7 +63,6 @@ h2 {
 	-ms-transition: all 0.2s ease-in-out;
 	transition: all 0.2s ease-in-out;
 	opacity: 0.6;
-	
 	pointer-events:all;
 }
 
@@ -79,11 +71,7 @@ h2 {
 	height: 160px;
 	margin: 8.333333333333% 0px 0px 0.5%;
 	float:left;
-	background: transparent url(../../images/arrow_prev.png) no-repeat;
-	
-	/*-moz-background-size:122px 122px; /* Firefox 3.6 */
-	/* background-size:122px 122px; */
-	
+	background: transparent url(../../../images/arrow_prev.png) no-repeat;
 	-webkit-background-size: contain;
 	-moz-background-size: contain;
 	-o-background-size: contain;
@@ -95,11 +83,7 @@ h2 {
 	height: 160px;
 	margin: 6% 0.5% 0 0;
 	float:right;
-	background: transparent url(../../images/arrow_next.png) no-repeat;
-	
-	/*-moz-background-size:160px 160px; /* Firefox 3.6 */
-	/*background-size:160px 160px; */
-	
+	background: transparent url(../../../images/arrow_next.png) no-repeat;
 	-webkit-background-size: contain;
 	-moz-background-size: contain;
 	-o-background-size: contain;
@@ -118,13 +102,13 @@ h2 {
 	opacity: 0.8;
 }
 
-
 /*----------- PAGE CLASSES--------------*/
 div.pg-pages {
 	position:relative;
 	clear:both;
+	top:0px;
+	left:0px;
 }
-
 div.pg-page {
 	width:100%;
 	position:absolute;
@@ -133,49 +117,40 @@ div.pg-page {
 	top:0px;
 	left:0px;
 }
-
 div.pg-wrapper {  
-    /* float:left; 		/* important */  
-    position:relative; 	/* important(so we can absolutely position the description div */
+    position:relative; 
 	text-align:left;
 	width: 100%;
 	padding: 1em;
 }
-
 div.pg-wrapper img {  
-    width: 100%; max-width: 1700px;
+    width: 100%;
+	max-width: 1700px;
 }
-
 div.pg-box {  
-    position:absolute; 	/* absolute position (so we can position it where we want)*/  
+    position:absolute;
 	letter-spacing: 0.06em;
 	font-family: 'NewsGothicBT-RomanCondensed',sans-serif;
 }
-
 div.pg-header {
 	width: 100%;
 	float:right;
 	margin: 20px 0px 0px 0px;
 }
-
 p.pg-box-content {
 	line-height: 108%;
 	padding: 1.8em;
 	color: #000;
 	text-align: left;
-	/* vertical-align: top; */
 }
-
 .txt-small {
 	font-size: 1.5em;
 	line-height: 110%;
 }
-
 .txt-medium {
 	font-size: 2em;
 	line-height: 110%;
 }
-
 .txt-large {
 	font-size: 3em;
 	line-height: 90%;
@@ -183,186 +158,72 @@ p.pg-box-content {
 
 /*----------- PAGE IDS--------------*/
 /*-----------    1    --------------*/
-/* FULL WIDTH RIGHT SIDE BOX */
-#page-one {
+#page-1 {
 	display:block;
-	z-index: 16;
+	z-index: 9;
 }
-
-#page-one-header {
-	position:absolute;
-	left: -2em;
-	width: 54.885993485342%;
-}
-
-#page-one-box {
-	background-color:#FFF;  
-	opacity:0.8; 
-    filter:alpha(opacity=80);
-	
-	top:	7.518796992481%;
-    left:	50%;  
-    width:	44.773519163763%;
-}
-
-#page-one-box-content {
-	margin: 23% 0px 0px 0px;
-}
-
 /*-----------    2    --------------*/
-#page-two {
+#page-2 {
 	display:none;
-	z-index: 15;
+	z-index: 10;
 }
-
-#page-two-box {
-	/*background-color:#FFF;  
-	opacity:0.8; 
-    filter:alpha(opacity=80); /* IE transparency */
-	/* top:	7.518796992481%;
-    left:	41.913043478261%;  
-    width:	52.173913043478%; */
-}
-
-#page-two-box-content {
-	margin: 14.41717791411% 7.52508361204% 14.41717791411% 7.52508361204% ;
-}
-
-/*-----------    2B    --------------*/
-#page-two-b {
-	display:none;
-	z-index: 15;
-}
-
 /*-----------    3    --------------*/
-/* 1:1 LEFT SIDE BOX */
-#page-three {
-	display:none;
-	z-index: 14;
-}
-
-#page-three-box {
-	/* background-color:#FFF;  */
-	opacity:1; 
-    filter:alpha(opacity=100); /* IE transparency */
-	top:	7.518796992481%;
-    left:	5.226480836237%;  
-    width:	39.547038327526%;
-	min-height: 100px;
-}
-
-#page-three-box-content {
-	text-align:left;
-}
-
-/*-----------    4    --------------*/
-/* FULL WIDTH RIGHT SIDE BOX */
-#page-four {
-	display:none;
-	z-index: 13;
-}
-
-#page-four-box {
-	background-color:#FFF;  
-	opacity:0.8; 
-    filter:alpha(opacity=80); /* IE transparency */
-
-	top:	7.518796992481%;
-    left:	50%;  
-    width:	44.773519163763%;
-	
-	line-height: 108%;
-	padding: 1.8em;
-	color: #000;
-	text-align: left;
-	
-	-moz-column-count: 2;
-	-moz-column-gap: 0.8em;
-	-moz-column-rule: none;
-	-moz-column-width: 50%;
-	-webkit-column-count: 2;
-	-webkit-column-gap: 0.8em;
-	-webkit-column-rule: none;
-	-webkit-column-width: 50%;
-	column-count: 2;
-	column-gap: 0.8em;
-	column-rule: none;
-	column-width: 50%;
-}
-
-
-
-/*-----------    5    --------------*/
-/* 1:1 RIGHT SIDE BOX */
-#page-five {
-	display:none;
-	z-index: 12;
-}
-
-#page-five-box {
-	top:	7.518796992481%; 
-    left:	55.574912891986%;  
-    width:	39.547038327526%;
-	
-	text-align: center;
-}
-
-/*-----------    6    --------------*/
-#page-six {
+#page-3 {
 	display:none;
 	z-index: 11;
 }
-#page-six-box {}
-
+/*-----------    4    --------------*/
+#page-4 {
+	display:none;
+	z-index: 12;
+}
+/*-----------    5    --------------*/
+#page-5 {
+	display:none;
+	z-index: 13;
+}
+/*-----------    6    --------------*/
+#page-6 {
+	display:none;
+	z-index: 14;
+}
 /*-----------    7    --------------*/
-#page-seven {
+#page-7 {
 	display:none;
-	z-index: 10;
+	z-index: 15;
 }
-#page-seven-box {}
-
 /*-----------    8    --------------*/
-/* 1:2 RIGHT SIDE BOX */
-#page-eight {
+#page-8 {
 	display:none;
-	z-index: 9;
+	z-index: 16;
 }
-
-#page-eight-box {
-	background-color:#FFF;  
-	opacity:0.8; 
-    filter:alpha(opacity=80); /* IE transparency */
-	
-	top:	7.518796992481%;
-    left:	41.114982578397%;  
-    width:	53.310104529617%;
-	
-	line-height: 108%;
-	padding: 1.8em;
-	color: #000;
-	text-align: left;
-}
-
-/*-----------    8B    --------------*/
-#page-eight-b {
-	display:none;
-	z-index: 10;
-}
-#page-eight-b-box {}
-
-
-
 /*-----------    9    --------------*/
-/* FULL WIDTH - 1:12 RIGHT SIDE BOX */
-#page-nine {
+#page-9 {
 	display:none;
-	z-index: 20;
+	z-index: 17;
+}
+/*-----------    10    --------------*/
+#page-10 {
+	display:none;
+	z-index: 17;
+}
+/*-----------    11    --------------*/
+#page-11 {
+	display:none;
+	z-index: 18;
+}    
+/*-----------    12    --------------*/
+
+/*-----------    14   --------------*/
+#page-resources {
+	display:none;
+	z-index: 30;
 }
 
-#page-nine-box {
+#page-resources-box {
 	top:	7.518796992481%;
-    left:	41.114982578397%;  
-    width:	53.310104529617%;
+    left:	50%;  
+    width:	45.5%;
 	
 	background-color:#FFF;  
 	opacity:0.8; 
@@ -373,15 +234,12 @@ p.pg-box-content {
 	
 }
 
-#page-nine-box-content {
+#page-resources-box-content {
 	font-family: 'NewsGothicBT-RomanCondensed',sans-serif;
 	font-size: 0.75em;
 	line-height: 130%;
 	letter-spacing: 0.1em;
 	color: #000;
-	
-	
-	
 	
 	-moz-column-count: 2;
 	-moz-column-gap: 1.5em;
@@ -397,28 +255,61 @@ p.pg-box-content {
 	column-width: 50%;
 }
 
-/*-----------    10    --------------*/
-/* FULL WIDTH - 1:12 RIGHT SIDE BOX */
-#page-ten {
+/*-----------    24   --------------*/
+#page-fifteen {
 	display:none;
-	z-index: 20;
+	z-index: 31;
 }
 
-#page-ten-box {
+#page-fifteen-box {
 	top:	7.518796992481%;
     left:	41.114982578397%;  
     width:	53.310104529617%;
-	
 	background-color:#FFF;  
-	opacity:0.9; 
-    filter:alpha(opacity=90); /* IE transparency */
-	
+	opacity:0.8; 
+    filter:alpha(opacity=80); /* IE transparency */
 	padding: 1.5em;
 	text-align: left;
-	
 }
 
-#page-ten-box-content {
+#page-fifteen-box-content {
+	font-family: 'NewsGothicBT-RomanCondensed',sans-serif;
+	font-size: 0.75em;
+	line-height: 130%;
+	letter-spacing: 0.1em;
+	color: #000;
+	-moz-column-count: 2;
+	-moz-column-gap: 1.5em;
+	-moz-column-rule: none;
+	-moz-column-width: 50%;
+	-webkit-column-count: 2;
+	-webkit-column-gap: 1.5em;
+	-webkit-column-rule: none;
+	-webkit-column-width: 50%;
+	column-count: 2;
+	column-gap: 1.5em;
+	column-rule: none;
+	column-width: 50%;
+}
+
+/*-----------    25    --------------*/
+#page-twentyfive {
+	display:none;
+	z-index: 32;
+}
+
+#page-twentyfive-box {
+	top:	7.518796992481%;
+    left:	41.114982578397%;  
+    width:	53.310104529617%;
+	background-color:#FFF;  
+	opacity:0.95; 
+    filter:alpha(opacity=95); /* IE transparency */
+	padding: 1.5em;
+	text-align: left;
+}
+
+#page-twentyfive-box-content {
 	font-family: 'NewsGothicBT-RomanCondensed',sans-serif;
 	font-size: 0.75em;
 	line-height: 130%;
@@ -439,17 +330,14 @@ p.pg-box-content {
 	column-width: 50%;
 }
 
+
+/*-----------    CREDITS STYLES    --------------*/
 div.pg-wardrobe-box {
 	position:relative;
-	
 	width: 100%;
 	padding: 0;
 	margin: 0 0 1em 0;
 	vertical-align: top;
-	height: 100%;
-
-	
-	/*font-size:1em;*/
 	line-height: 120%;
 	
 	-webkit-column-break-inside:avoid;
@@ -457,8 +345,6 @@ div.pg-wardrobe-box {
 	-o-column-break-inside:avoid;
 	-ms-column-break-inside:avoid;
 	column-break-inside:avoid;
-	
-	/*background-color:#CCC;*/
 }
 
 div.pg-wardrobe-thumb {
@@ -472,26 +358,17 @@ div.pg-wardrobe-thumb {
 	padding: 0;
 	text-align:right;
 	vertical-align:top;
-	/*background-color:#FF9;*/
 }
 
 div.pg-wardrobe-label {
 	display:block;
 	position:inherit;
-	/*background-color:#0FC;*/
 }
-
-
-
-
-
 
 /*-------------------------*/
 div.pg-credits-box {
 	position:relative;
 	width: 100%;
-	/* background-color:#CCC; */
-	/*padding: 0 0 0 18%;*/
 	margin: 0 0 0.8em 0;
 	vertical-align: top;
 	
@@ -500,6 +377,15 @@ div.pg-credits-box {
 	-o-column-break-inside:avoid;
 	-ms-column-break-inside:avoid;
 	column-break-inside:avoid; 
+}
+
+div.pg-credits-box-break {
+	
+	-webkit-column-break-after: always;
+	-moz-column-break-after: always;
+	-o-column-break-after: always;
+	-ms-column-break-after: always;
+	column-break-after: always;
 }
 
 div.pg-credits-box a, div.pg-wardrobe-label a {
@@ -521,6 +407,10 @@ div.pg-credits-box img {
 	top: 0;
 	width:16.875%;
 	margin: 0 1em 1em 0;	
+}
+
+.pg-contributor {
+	text-transform:uppercase;
 }
 
 /*-------------- MEDIA QUERIES -------------------- */
@@ -545,9 +435,6 @@ div.pg-credits-box img {
 	}
 }
 
-
-
-
 /* Smartphones (portrait and landscape) ----------- */
  
 @media only screen
@@ -556,7 +443,6 @@ and (max-device-width : 480px) {
 
 }
 	
-
 /* Smartphones (landscape) ----------- */
 @media only screen
 and (min-width : 321px) {
