--- a/banff/css/pages.css
+++ b/banff/css/pages.css
@@ -78,7 +78,7 @@ h2 {
 	height: 160px;
 	margin: 8.333333333333% 0px 0px 0.5%;
 	float:left;
-	background: transparent url(../../../images/arrow_prev.png) no-repeat;
+	background: transparent url(../../images/arrow_prev.png) no-repeat;
 	-webkit-background-size: contain;
 	-moz-background-size: contain;
 	-o-background-size: contain;
@@ -90,7 +90,7 @@ h2 {
 	height: 160px;
 	margin: 6% 0.5% 0 0;
 	float:right;
-	background: transparent url(../../../images/arrow_next.png) no-repeat;
+	background: transparent url(../../images/arrow_next.png) no-repeat;
 	-webkit-background-size: contain;
 	-moz-background-size: contain;
 	-o-background-size: contain;
@@ -275,6 +275,18 @@ div.pg-box-content {
 	z-index: 10;
 }
 
+/*-----------    17    --------------*/
+#page-17 {
+	display:none;
+	z-index: 9;
+}
+
+/*-----------    18    --------------*/
+#page-18 {
+	display:none;
+	z-index: 8;
+}
+
 /*-----------    INTERVIEW    --------------*/
 #page-interview {
 	display:none;
@@ -284,9 +296,9 @@ div.pg-box-content {
 
 #pg-interview {
 	position:absolute;
-	top:	30%;
+	top:	20%;
     width:	50%;  
-    left:	45%;
+    left:	50%;
 	background-color:#FFF;  
 	opacity:0.8; 
     filter:alpha(opacity=80); /* IE transparency */
