--- a/workshop/jaipur/css/pages.css
+++ b/workshop/jaipur/css/pages.css
@@ -2,9 +2,8 @@ body{
 	background-color:#FFF;
 	font-size: 20px;
 	color: #000;
-	font-family: 'NewsGothicBT-RomanCondensed',sans-serif; 
+	min-height: 480px;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
-	min-height: 540px;
 }
 
 img {
@@ -13,22 +12,28 @@ img {
 
 h2 {
 	font-weight:normal;
-	font-size: 1.6em;
+	font-size: 2em;
+	line-height:100%;
 	margin:0 0 0.5em 0;
 	padding:0;
-	text-transform:uppercase;
 }
+
 /*----------- NAV --------------*/
 /*-----------SITE NAVIGATION ---------------*/
 #nav-holder {
 	position:relative;
 	display:block;
 	width:100%;
+	top: 0;
+	left: 0;
 }
 
 #nav {
 	padding: 1% 2% 1% 1.6%;
 	width: 30%;
+	/*background-color:#FFF;
+	opacity:0.9; 
+    /*filter:alpha(opacity=90); /* IE transparency */
 	z-index:100;
 }
 
@@ -46,6 +51,7 @@ h2 {
 	-ms-user-select: none;
 	-o-user-select: none;
 	user-select: none;
+	
 	pointer-events:none;
 }
 .pg-nav span {
@@ -63,6 +69,7 @@ h2 {
 	-ms-transition: all 0.2s ease-in-out;
 	transition: all 0.2s ease-in-out;
 	opacity: 0.6;
+	
 	pointer-events:all;
 }
 
@@ -102,13 +109,13 @@ h2 {
 	opacity: 0.8;
 }
 
+
 /*----------- PAGE CLASSES--------------*/
 div.pg-pages {
 	position:relative;
 	clear:both;
-	top:0px;
-	left:0px;
 }
+
 div.pg-page {
 	width:100%;
 	position:absolute;
@@ -117,138 +124,251 @@ div.pg-page {
 	top:0px;
 	left:0px;
 }
+
 div.pg-wrapper {  
-    position:relative; 
+    /* float:left; 		/* important */  
+    position:relative; 	/* important(so we can absolutely position the description div */
 	text-align:left;
 	width: 100%;
 	padding: 1em;
 }
+
 div.pg-wrapper img {  
-    width: 100%;
-	max-width: 1700px;
+    width: 100%; max-width: 1700px;
 }
+
 div.pg-box {  
-    position:absolute;
-	letter-spacing: 0.06em;
-	font-family: 'NewsGothicBT-RomanCondensed',sans-serif;
+    position:relative;
+	text-align:right;
+	width: 100%; max-width: 1700px;
 }
+
 div.pg-header {
 	width: 100%;
 	float:right;
 	margin: 20px 0px 0px 0px;
 }
-p.pg-box-content {
-	line-height: 108%;
-	padding: 1.8em;
+
+div.pg-box-content {
+	position:absolute;
+	right: 0;
+	font-family: 'NewsGothicBT-RomanCondensed',sans-serif;
+	text-align:right;
+	font-size: 1em;
+	letter-spacing: 0.06em;
+	margin: 1em 0 0 0;
+	line-height: 130%;
 	color: #000;
-	text-align: left;
 }
+
 .txt-small {
 	font-size: 1.5em;
 	line-height: 110%;
 }
+
 .txt-medium {
 	font-size: 2em;
 	line-height: 110%;
 }
+
 .txt-large {
 	font-size: 3em;
 	line-height: 90%;
 }
 
 /*----------- PAGE IDS--------------*/
+#page-zero {
+	display:block;
+	z-index: 0;
+}
 /*-----------    1    --------------*/
 #page-1 {
 	display:block;
-	z-index: 9;
+	z-index: 25;
 }
+
 /*-----------    2    --------------*/
 #page-2 {
 	display:none;
-	z-index: 10;
+	z-index: 24;
 }
+
 /*-----------    3    --------------*/
 #page-3 {
 	display:none;
-	z-index: 11;
+	z-index: 23;
 }
+
 /*-----------    4    --------------*/
 #page-4 {
 	display:none;
-	z-index: 12;
+	z-index: 22;
 }
+
 /*-----------    5    --------------*/
 #page-5 {
 	display:none;
-	z-index: 13;
+	z-index: 21;
 }
+
 /*-----------    6    --------------*/
 #page-6 {
 	display:none;
-	z-index: 14;
+	z-index: 20;
 }
+
 /*-----------    7    --------------*/
 #page-7 {
 	display:none;
-	z-index: 15;
+	z-index: 19;
 }
+
+
 /*-----------    8    --------------*/
 #page-8 {
 	display:none;
-	z-index: 16;
+	z-index: 18;
 }
+
 /*-----------    9    --------------*/
 #page-9 {
 	display:none;
-	z-index: 17;
+	z-index: 16;
 }
+
 /*-----------    10    --------------*/
 #page-10 {
 	display:none;
-	z-index: 17;
+	z-index: 15;
 }
 
 /*-----------    11    --------------*/
 #page-11 {
 	display:none;
-	z-index: 17;
-}
+	z-index: 14;
+}    
 
 /*-----------    12    --------------*/
 #page-12 {
 	display:none;
-	z-index: 17;
+	z-index: 13;
 }
 
 /*-----------    13    --------------*/
 #page-13 {
 	display:none;
-	z-index: 17;
+	z-index: 12;
 }
-/*-----------    14   --------------*/
+
+
+/*-----------    INTERVIEW    --------------*/
+#page-interview {
+	display:none;
+	z-index: 17;
+	font-family: 'NewsGothicBT-RomanCondensed',sans-serif;
+}
+
+#pg-interview {
+	position:absolute;
+	top:	15%;
+    width:	50%;  
+    left:	45%;
+	background-color:#FFF;  
+	opacity:0.9; 
+    filter:alpha(opacity=90); /* IE transparency */
+	padding: 1.5em;
+	text-align: left;
+}
+
+#pg-interview-content {
+	font-size: 0.75em;
+	line-height: 140%;
+	letter-spacing: 0.1em;
+	color: #000;
+	
+	-moz-column-count: 1;
+	-moz-column-gap: 1.5em;
+	-moz-column-rule: none;
+	-moz-column-width: 50%;
+	-webkit-column-count: 1;
+	-webkit-column-gap: 1.5em;
+	-webkit-column-rule: none;
+	-webkit-column-width: 50%;
+	column-count: 1;
+	column-gap: 1.5em;
+	column-rule: none;
+	column-width: 50%;
+}
+
+#pg-interview p {
+	margin: 0 0 1em 0;
+	font-size: 1.26em;
+	line-height: 130%;
+}
+
+#pg-interview p.intro {
+	margin: 0 0 1em 0;
+	color: #000;
+	font-size:1.1em;
+	line-height: 130%;
+	font-family: 'harriet_display_regularRg';
+}
+
+#pg-interview p.question {
+	margin: 0 0 0.2em 0;
+	padding-top: 1em;
+	color: #000;
+	font-size:1.3em;
+	line-height: 130%;
+	text-transform:uppercase;
+	font-family: 'NewsGothicBT-RomanCondensed',sans-serif;
+}
+
+#pg-interview p.answer {
+	margin: 0 0 1em 0;
+	font-size: 1.1em;
+	line-height: 130%;
+	font-family: 'harriet_display_regularRg';
+	/*text-indent: 2em;*/
+}
+
+
+#pg-interview a  {
+	color:#000; 
+	background-color:#e6e6e6; 
+	text-decoration:none;
+}
+
+#pg-interview a:link, #pg-interview a:visited {
+	text-decoration:none;
+}
+
+#pg-interview a:hover, #pg-interview a:active {
+	text-decoration:underline;
+}
+
+/*-----------    RESOURCES    --------------*/
 #page-resources {
 	display:none;
-	z-index: 30;
+	z-index: 11;
+	font-family: 'NewsGothicBT-RomanCondensed',sans-serif;
 }
 
-#page-resources-box {
-	top:	7.518796992481%;
-    left:	50%;  
-    width:	45.5%;
-	
+#pg-resources {
+	position:absolute;
+	top:	15%;
+    width:	45%;  
+    left:	50%;
 	background-color:#FFF;  
-	opacity:0.8; 
-    filter:alpha(opacity=80); /* IE transparency */
-	
+	opacity:0.9; 
+    filter:alpha(opacity=90); /* IE transparency */
 	padding: 1.5em;
 	text-align: left;
-	
 }
 
-#page-resources-box-content {
-	font-family: 'NewsGothicBT-RomanCondensed',sans-serif;
+#pg-resources-content {
 	font-size: 0.75em;
-	line-height: 130%;
+	line-height: 140%;
 	letter-spacing: 0.1em;
 	color: #000;
 	
@@ -266,53 +386,34 @@ p.pg-box-content {
 	column-width: 50%;
 }
 
-/*-----------    24   --------------*/
-#page-fifteen {
-	display:none;
-	z-index: 31;
+#pg-resources p {
+	margin: 0 0 1em 0;
+	font-size: 1.1em;
 }
 
-#page-fifteen-box {
-	top:	7.518796992481%;
-    left:	41.114982578397%;  
-    width:	53.310104529617%;
-	background-color:#FFF;  
-	opacity:0.8; 
-    filter:alpha(opacity=80); /* IE transparency */
-	padding: 1.5em;
-	text-align: left;
+.pg-copy-em {
+	color:#060;
 }
 
-#page-fifteen-box-content {
-	font-family: 'NewsGothicBT-RomanCondensed',sans-serif;
-	font-size: 0.75em;
-	line-height: 130%;
-	letter-spacing: 0.1em;
-	color: #000;
-	-moz-column-count: 2;
-	-moz-column-gap: 1.5em;
-	-moz-column-rule: none;
-	-moz-column-width: 50%;
-	-webkit-column-count: 2;
-	-webkit-column-gap: 1.5em;
-	-webkit-column-rule: none;
-	-webkit-column-width: 50%;
-	column-count: 2;
-	column-gap: 1.5em;
-	column-rule: none;
-	column-width: 50%;
+#pg-resources a  {
+	color:#000; background-color:#e6e6e6;
 }
 
-/*-----------    25    --------------*/
-#page-twentyfive {
-	display:none;
-	z-index: 32;
+#pg-resources a:link, #pg-interview a:visited {
+	text-decoration:none;
 }
 
-#page-twentyfive-box {
-	top:	7.518796992481%;
-    left:	41.114982578397%;  
-    width:	53.310104529617%;
+#pg-resources a:hover, #pg-interview a:active {
+	text-decoration:underline;
+}
+
+/*-----------    WARDROBE    --------------*/
+
+#pg-wardrobe {
+	position:absolute;
+	top:	15%;
+    width:	45%;  
+    left:	50%;
 	background-color:#FFF;  
 	opacity:0.95; 
     filter:alpha(opacity=95); /* IE transparency */
@@ -320,7 +421,14 @@ p.pg-box-content {
 	text-align: left;
 }
 
-#page-twentyfive-box-content {
+
+#page-wardrobe {
+	display:none;
+	z-index: 19;
+	font-family: 'NewsGothicBT-RomanCondensed',sans-serif;
+}
+
+#page-wardrobe-box-content {
 	font-family: 'NewsGothicBT-RomanCondensed',sans-serif;
 	font-size: 0.75em;
 	line-height: 130%;
@@ -420,6 +528,19 @@ div.pg-credits-box img {
 	margin: 0 1em 1em 0;	
 }
 
+/*-------------------------*/
+div.pg-box a {
+	color:#000; background-color:#e6e6e6;
+}
+
+div.pg-box a:link, div.pg-box a:visited {
+	text-decoration:none;
+}
+
+div.pg-box a:hover, div.pg-box a:active {
+	text-decoration:underline;
+}
+
 .pg-contributor {
 	text-transform:uppercase;
 }
@@ -430,12 +551,69 @@ div.pg-credits-box img {
 	body { 
 		font-size: 10px;
    }
+   
+   #pg-interview {
+		float:left;
+		background-color:#FFF;  
+		opacity:0.9; 
+		filter:alpha(opacity=90); /* IE transparency */
+		padding: 1.5em;
+		text-align: left;
+   }
+   
+   #pg-interview-content {
+	font-size: 1.2em;
+	line-height: 140%;
+	letter-spacing: 0.1em;
+	color: #000;
+	
+	-moz-column-count: 1;
+	-moz-column-gap: 0;
+	-moz-column-rule: none;
+	-moz-column-width: 100%;
+	-webkit-column-count: 1;
+	-webkit-column-gap: 0;
+	-webkit-column-rule: none;
+	-webkit-column-width: 100%;
+	column-count: 1;
+	column-gap: 0;
+	column-rule: none;
+	column-width: 100%;
+	}
 }
 
 @media (min-width:641px) and (max-width:999px) {
 	body { 
 		font-size: 16px;
    }
+   
+	#pg-interview {
+		background-color:#FFF;  
+		opacity:0.9; 
+		filter:alpha(opacity=90); /* IE transparency */
+		padding: 1.5em;
+		text-align: left;
+	}
+
+	#pg-interview-content {
+		font-size: 0.86em;
+		line-height: 140%;
+		letter-spacing: 0.1em;
+		color: #000;
+		
+		-moz-column-count: 1;
+		-moz-column-gap: 0;
+		-moz-column-rule: none;
+		-moz-column-width: 100%;
+		-webkit-column-count: 1;
+		-webkit-column-gap: 0;
+		-webkit-column-rule: none;
+		-webkit-column-width: 100%;
+		column-count: 1;
+		column-gap: 0;
+		column-rule: none;
+		column-width: 100%;
+	}   
 }
 
 
@@ -444,7 +622,39 @@ div.pg-credits-box img {
 	body {
 		font-size: 20px;
 	}
+	
+	#pg-interview {
+		background-color:#FFF;  
+		opacity:0.9; 
+		filter:alpha(opacity=90); /* IE transparency */
+		padding: 1.5em;
+		text-align: left;
+	}
+
+	#pg-interview-content {
+		font-size: 0.75em;
+		line-height: 140%;
+		letter-spacing: 0.1em;
+		color: #000;
+		
+		-moz-column-count: 1;
+		-moz-column-gap: 1.5em;
+		-moz-column-rule: none;
+		-moz-column-width: 50%;
+		-webkit-column-count: 1;
+		-webkit-column-gap: 1.5em;
+		-webkit-column-rule: none;
+		-webkit-column-width: 50%;
+		column-count: 1;
+		column-gap: 1.5em;
+		column-rule: none;
+		column-width: 50%;
+	}
+
 }
+
+
+
 
 /* Smartphones (portrait and landscape) ----------- */
  
@@ -454,6 +664,7 @@ and (max-device-width : 480px) {
 
 }
 	
+
 /* Smartphones (landscape) ----------- */
 @media only screen
 and (min-width : 321px) {
