--- a/montana/css/pages.css
+++ b/montana/css/pages.css
@@ -46,7 +46,7 @@ h2 {
 
 #nav {
 	/*font-family: 'NewsGothicBT-RomanCondensed',sans-serif;*/
-	padding: 1% 2% 1% 1.6%;
+	padding: 0 2% 1% 1.6%;
 	width: 30%;
 
 	/* background-color:#FFF;
@@ -185,7 +185,7 @@ div.pg-wrapper {
     position:relative; 	/* important(so we can absolutely position the description div */
 	text-align:left;
 	width: 100%;
-	padding: 1em;
+	padding: 1em 1em 0 1em;
 }
 
 div.pg-wrapper img {  
